--- a/1.html
+++ b/1.html
@@ -7,7 +7,7 @@
     <meta name="description" content="나만의 인물열전, 일생기록, 최민혁"
   </head>
   <body>
-    <h1><a href="1.html"> 최민혁</a></p></h1>
+    <h1>최민혁</p></h1>
     <p>출생: 2003년</p>
     <p>출생지: 경기도 군포시</p>
     <p>주소: 경기도 의왕시</p>
