--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <html lang="ko">
   <head>
-    <title>wonderful developer project1 - 일생기록</title>
+    <title>This is My First web page</title>
     <meta charset="utf-8">
     <meta name="description" content="나만의 인물열전, 일생기록, 최민혁"
   </head>
